# libbraille-code

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  autogen_mac.sh  configure.ac  cross-configure.sh
VisualC6/: Libbraille.dsw  Makefile.am  config.h.in
VisualC6/libltdl/: config.h  ltdl.c  ltdl.h
backend/: Makefile.am  drvdllentry.c
backend/alva/: Makefile.am  alva.dsp  alva.txt  brl.c
backend/alvausb/: Makefile.am  alvausb.dsp  alvausb.txt  brl.c
backend/baum/: Makefile.am  baum.dsp  baum.txt  brl.c
backend/braillelite/: Makefile.am  braillelite.dsp  braillelite.txt  brl.c
backend/braillenote/: Makefile.am  braillenote.dsp  braillenote.txt  brl.c
backend/eurobraille/: Makefile.am  brl.c  eurobraille.dsp  eurobraille.txt
backend/fakegtk/: Makefile.am  brl.c
backend/fakewin/: Makefile.am  brl.c  fake.dsp
backend/handytech/: Makefile.am  brl.c  handytech.dsp  handytech.txt
backend/none/: Makefile.am  brl.c  none.dsp  none.txt
backend/once/: Makefile.am  brl.c  once.dsp  once.txt
backend/papenmeierusb/: Makefile.am  brl.c  papenmeierusb.dsp  papenmeierusb.txt
backend/technibraille/: Makefile.am  brl.c  technibraille.dsp  technibraille.txt
backend/text/: Makefile.am  brl.c  text.dsp
backend/voyager/: Makefile.am  brl.c  voyager.dsp  voyager.txt
debian/: README.Debian  changelog  control  copyright  libbraille-dev.docs  libbraille-dev.install  libbraille-fake.install  libbraille.1.ex  libbraille.sgml  libbraille0-15.conffiles  libbraille0-15.dirs  libbraille0-15.install  libbraille0-15.postinst  python-braille.install  python-braille.postinst  python-braille.prerm  rules
debian/devfs/: braille
doc/: FAQ  Makefile.am  libbraille.conf.in  tutorial.tex
include/: Makefile.am  braille.h  brl_config.h  brl_error.h  brl_keycode.h  brl_term.h  brl_termios.h  brl_win32.h  driver.h  serial.h
java/: Makefile.am  jbraille.i
lib/: Makefile.am  braille.c  config.c  config_posix.c  config_win32.c  dllentry.c  error.c  libbraille.dsp  serial_tios.c  serial_win32.c
python/: Makefile.am  Python.dsp  braille.i
scripts/: Makefile.am  install.nsi.in  libbraille.inf  libbraille.spec.in
scripts/hotplug/: README  libbraille.usermap  libusbbraille
tables/: Makefile.am  american.tbl  british.tbl  french-win.tbl  french.tbl  german.tbl
test/: Makefile.am  SimpleTest.dsp  test_libbraille.c  test_libbraille.java  test_libbraille.py
